crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__block-html-tags.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<blockquote>Quoted text.
</blockquote>
