crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__blockquote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<blockquote>A quoted paragraph with ''emphasis''.
</blockquote>
