crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__bullet-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
* one
* two
** two a
** two b
* three
