crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__category-links.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Intro paragraph mentions inline.

A paragraph with and a [[:Category:Linked|normal link]].

[[Category:Physics]] [[Category:Science|sort key]]
