crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__code-blocks.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<syntaxhighlight lang="python">def f():
    return 1</syntaxhighlight>
<pre>plain preformatted
  text block</pre>
