crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__comment-boundaries.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
one two line.

three line.

four five.
