crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__definition-consecutive-terms.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
; first<br />
second
: shared definition
