crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__definition-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
; Term
: Definition
; Apple
: A fruit
