crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__definition-multi.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
; Fruit
: Apple
: Banana
; Vegetable
: Carrot
