crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__definition-term-url.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
; http://example.com
: a definition
