crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__emphasis-nesting.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
'''''bold and italic''''' then ''italic '''bold''' tail''
