crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__emphasis.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Some ''italic'' and '''bold''' and '''''both''''' words.
